fix spacing

--- a/www/styles.css
+++ b/www/styles.css
@@ -163,7 +163,7 @@ h3 {
 }
 
 .upload-pane {
-    margin-top: -1.4em;
+    margin-top: -1.8em;
     align-self: center;
     width: 33em;
     padding: 0;
